# M-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml  dev_team_oob.yaml  xfyun.example.yaml
docs/design/: README.md  detailed-technical-design.md  product-and-architecture-plan.md  technical-roadmap-v1.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  server_manager.rs
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: AgentsPage.tsx  ChatPage.tsx  ConfigPage.tsx  HistoryPage.tsx  WorkspacePage.tsx
frontend/src/store/: configStore.ts  runListStore.ts  runStore.ts  taskStore.ts
frontend/src/types/: index.ts  models.ts  websocket.ts
frontend/src/ws/: connection.ts  index.ts  messageHandler.ts  useWebSocket.ts
src/magent_tui/: __init__.py  __main__.py  app.py  artifacts.py  claude_agent.py  config_models.py  doctor.py  main.py  orchestrator.py  run_events.py  run_service.py  server.py  settings_loader.py  tab_app.py  task_state.py  templates.py  theme.tcss  workspace_tools.py
tests/: test_agent_selection_guard.py  test_pipeline_gate.py  test_run_service.py  test_server.py  test_tab_app_send.py  test_templates.py  test_workspace_tools.py
